test/conformance/chainsaw/exceptions/exclude-selinux/exception.yaml
apiVersion: kyverno.io/v2
kind: PolicyException
metadata:
  name: pod-security-exception
  namespace: policy-exception-ns
spec:
  exceptions:
  - policyName: psa
    ruleNames:
    - baseline
  match:
    any:
    - resources:
        namespaces:
        - staging-ns
  podSecurity:
    - controlName: "SELinux"
      images:
      - nginx
      restrictedField: "spec.containers[*].securityContext.seLinuxOptions.type"
      values:
      - "foo"
    - controlName: "SELinux"
      images:
      - nginx
      restrictedField: "spec.initContainers[*].securityContext.seLinuxOptions.type"
      values:
      - "bar"
