test/conformance/chainsaw/exceptions/exclude-selinux/pod-allowed-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-1
  namespace: default
spec:
  containers:
  - name: nginx1
    image: nginx
    args:
    - sleep
    - 1d
    securityContext:
      seLinuxOptions:
        type: container_t
  initContainers:
  - name: nginx2
    image: nginx
    args:
    - sleep
    - 1d
    securityContext:
      seLinuxOptions:
        type: container_init_t
