test/conformance/chainsaw/exceptions/exclude-selinux/pod-allowed-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-2
  namespace: staging-ns
spec:
  containers:
  - name: nginx1
    image: nginx
    args:
    - sleep
    - 1d
    securityContext:
      seLinuxOptions:
        type: foo
  initContainers:
  - name: nginx2
    image: nginx
    args:
    - sleep
    - 1d
    securityContext:
      seLinuxOptions:
        type: bar
