test/conformance/chainsaw/exceptions/exclude-selinux/pod-rejected-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-1
  namespace: staging-ns
spec:
  containers:
  - name: nginx1
    image: nginx
    args:
    - sleep
    - 1d
    securityContext:
      seLinuxOptions:
        type: bar
  initContainers:
  - name: nginx2
    image: nginx
    args:
    - sleep
    - 1d
    securityContext:
      seLinuxOptions:
        type: foo
