test/conformance/chainsaw/exceptions/exclude-selinux/pod-rejected-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-2
  namespace: staging-ns
spec:
  containers:
  - name: busybox1
    image: busybox
    args:
    - sleep
    - 1d
    securityContext:
      seLinuxOptions:
        type: foo
  initContainers:
  - name: busybox2
    image: busybox
    args:
    - sleep
    - 1d
    securityContext:
      seLinuxOptions:
        type: bar
