test/conformance/chainsaw/exceptions/exclude-selinux/pod-rejected-4.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-4
  namespace: default
spec:
  containers:
  - name: nginx1
    image: nginx
    args:
    - sleep
    - 1d
    securityContext:
      seLinuxOptions:
        type: foo
  initContainers:
  - name: nginx2
    image: nginx
    args:
    - sleep
    - 1d
    securityContext:
      seLinuxOptions:
        type: bar
